# libkolab

./: .gitignore  CMakeLists.txt  autogen.sh  libkolab_0.3.1.orig.tar.gz.delta  libkolab_0.3.1.orig.tar.gz.id  libkolab_0.4.0.orig.tar.gz.delta  libkolab_0.4.0.orig.tar.gz.id  libkolab_0.4.2.orig.tar.gz.delta  libkolab_0.4.2.orig.tar.gz.id  libkolab_0.5.0.orig.tar.gz.delta  libkolab_0.5.0.orig.tar.gz.id  libkolab_0.5.2.orig.tar.gz.delta  libkolab_0.5.2.orig.tar.gz.id  libkolab_0.5.3.orig.tar.gz.delta  libkolab_0.5.3.orig.tar.gz.id  libkolab_0.6.0.orig.tar.gz.delta  libkolab_0.6.0.orig.tar.gz.id  libkolab_config.h.in  shared.i
calendaring/: calendaring.cpp  calendaring.i  datetimeutils.cpp  event.cpp  event.h
calendaring/php/: test.php
cmake/modules/: FindLibcalendaring.cmake  FindSWIG.cmake  LibkolabConfig.cmake.in  SWIGUtils.cmake
conversion/: CMakeLists.txt  commonconversion.cpp  commonconversion.h  kabcconversion.cpp  kabcconversion.h  kcalconversion.cpp  kcalconversion.h  kolabconversion.cpp  timezoneconverter.cpp
debian/: changelog  control  copyright  kolab.ini  kolabdummy.ini  libkolab-dev.dirs  libkolab-dev.install  libkolab-kde-dev.install  libkolab-kde0.install  libkolab-kde0.lintian-overrides  libkolab-kde0.shlibs  libkolab0.install  libkolab0.lintian-overrides  libkolab0.symbols  libkolab0v5.lintian-overrides  libkolab0v5.symbols  libkolab1.install  libkolab1.lintian-overrides  libkolab1.symbols  php-kolab-kde.install  php-kolab.install  php-kolab.postinst  php-kolab.postrm  php-kolab.preinst  php-kolab.prerm  python-kolab.install  rules  shlibs  watch
debian/patches/: 0001-Allow-KDateTime-with-only-valid-date.patch  0002-Make-libkolab-compile-with-upstream-kdepimlibs.patch  add-linker-flags.patch  disable-rpath.patch  dont-redefine-KCalCore-Duration.patch  fix-libkolab-kabc-picture.patch  libkolab-0.3.1-php-paths.patch  make_python_package.patch  separate-target-names.patch  series  simpler_cmake_test.patch  upstream_Fix-build-with-Qt-5.5-and-also-adjust-to-the-latest-.patch  use-python2-only.patch
freebusy/: freebusy.cpp  freebusy.h
icalendar/: icalendar.cpp  imip.cpp
kolabformat/: errorhandler.cpp  errorhandler.h  formathelpers.cpp  formathelpers.h  kolabdefinitions.h  kolabobject.cpp  kolabobject.h  kolabobject.i  mimeobject.cpp  mimeobject.h  v2helpers.cpp  v2helpers.h  xmlobject.cpp  xmlobject.h
kolabformatV2/: contact.cpp  contact.h  distributionlist.cpp  distributionlist.h  event.cpp  incidence.cpp  incidence.h  journal.cpp  kolabbase.cpp  kolabbase.h  note.cpp  task.cpp  task.h
mime/: mimeutils.cpp  mimeutils.h
tests/: CMakeLists.txt  benchmark.cpp  calendaringtest.cpp  calendaringtest.h  formattest.cpp  formattest.h  freebusytest.cpp  kcalconversiontest.cpp  kcalconversiontest.h  kolabobjecttest.cpp  kolabobjecttest.h  mimeobjecttest.cpp  mimeobjecttest.h  testhelpers.h  testutils.h  timezonetest.cpp  timezonetest.h  upgradetest.cpp
tests/testfiles/v2/contacts/: address.vcf.mime  bug238996.vcf.mime  complex.vcf.mime  displayname.vcf.mime  emails.vcf.mime  phonenumbers.vcf.mime  picture.vcf.mime  simple.vcf.mime
tests/testfiles/v2/event/: allday.ics.mime  attachment.ics.mime  complex.ics.mime  iso8859-1.mime  simple.ics.mime  simple_missingTypeHeader.ics.mime
tests/testfiles/v2/journal/: complex.ics.mime  simple.ics.mime
tests/testfiles/v2/task/: complex.ics.mime  prioritytest1.ics.mime  prioritytest2.ics.mime  simple.ics.mime
tests/testfiles/v3/contacts/: complex.vcf  distlist.vcf.mime
tests/testfiles/v3/note/: note.mime.mime
utils/: CMakeLists.txt
